@@ -11,10 +11,13 @@ film.height = 1024
 # 2) noise under 0.015
 #
 batch.haltspp = 512
+#batch.haltspp = 32
 batch.haltnoisethreshold = 0.03
 ################################################################################
-film.outputs.0.type = "RGB_IMAGEPIPELINE"
-film.outputs.0.filename = "RGB_IMAGEPIPELINE_0.png"
+# To bake also material transparency on the map Alpha channel, you
+# need to enable film ALPHA channel with RGBA_IMAGEPIPELINE output
+film.outputs.0.type = "RGBA_IMAGEPIPELINE"
+film.outputs.0.filename = "RGBA_IMAGEPIPELINE_0.png"
 film.outputs.0.index = "0"
 #
 # Normal image pipeline 
@@ -37,9 +40,9 @@ film.imagepipelines.1.0.type = NOP
 #
 # Required for Intel Oidn
 #
-film.outputs.1.type = RGB_IMAGEPIPELINE
-film.outputs.1.index = 1
-film.outputs.1.filename = denoised.png
+#film.outputs.1.type = RGB_IMAGEPIPELINE
+#film.outputs.1.index = 1
+#film.outputs.1.filename = denoised.png
 ################################################################################
 #
 # General baking options
@@ -49,11 +52,11 @@ film.outputs.1.filename = denoised.png
 # will have high resolution maps.
 #
 # Set the minimum size of the baked map when "autosize" option is enabled
-#bake.minmapautosize = 1024
-bake.minmapautosize = 128
+bake.minmapautosize = 1024
+#bake.minmapautosize = 128
 # Set the maximum size of the baked map when "autosize" option is enabled
-#bake.maxmapautosize = 2048
-bake.maxmapautosize = 256
+bake.maxmapautosize = 2048
+#bake.maxmapautosize = 512
 # Tell "autosize" option to use power of 2 size (for later usage with glTF,
 # OpenGL, Vulkan, etc.)
 bake.powerof2autosize.enable = 1
