@@ -1,3 +1,4 @@
+scene.camera.type = "perspective"
 scene.camera.cliphither = 0.00100000005
 scene.camera.clipyon = 1.00000002e+30
 scene.camera.shutteropen = 0
@@ -10,18 +11,23 @@ scene.camera.screenwindow = -1 1 -0.5625 0.5625
 scene.camera.lensradius = 0
 scene.camera.focaldistance = 10
 scene.camera.autofocus.enable = 0
-scene.camera.type = "perspective"
 scene.camera.oculusrift.barrelpostpro.enable = 0
 scene.camera.fieldofview = 39.5977554
+##
+scene.lights.139858846954504.type = "sphere"
 scene.lights.139858846954504.gain = 1 1 1
 scene.lights.139858846954504.transformation = -0.290864646 0.955171168 -0.0551890582 0 -0.771100819 -0.199883357 0.604524732 0 0.566393197 0.218391195 0.794672251 0 4.07624531 1.00545394 5.903862 1
 scene.lights.139858846954504.id = 0
-scene.lights.139858846954504.type = "sphere"
 scene.lights.139858846954504.color = 1 1 1
-scene.lights.139858846954504.power = 100
+scene.lights.139858846954504.power = 110
 scene.lights.139858846954504.efficency = 17
 scene.lights.139858846954504.position = 0 0 0
 scene.lights.139858846954504.radius = 0.300000012
+##
+scene.lights.envlight.type = "constantinfinite"
+scene.lights.envlight.color = 0.7 0.7 0.7
+scene.lights.envlight.gain = 0.5 0.5 0.5
+##
 scene.textures.139857989714440Color.type = "checkerboard2d"
 scene.textures.139857989714440Color.texture1 = "0.7 0.7 0.7"
 scene.textures.139857989714440Color.texture2 = "0.7 0 0"
@@ -30,14 +36,25 @@ scene.textures.139857989714440Color.mapping.uvindex = 0
 scene.textures.139857989714440Color.mapping.rotation = 0
 scene.textures.139857989714440Color.mapping.uvscale = 10 -10
 scene.textures.139857989714440Color.mapping.uvdelta = 0 2
+##
+scene.textures.139857990544904Color_Transp.type = "dots"
+scene.textures.139857990544904Color_Transp.inside = "0 0 0"
+scene.textures.139857990544904Color_Transp.outside = "1 1 1"
+scene.textures.139857990544904Color_Transp.mapping.type = "uvmapping2d"
+scene.textures.139857990544904Color_Transp.mapping.uvindex = 0
+scene.textures.139857990544904Color_Transp.mapping.rotation = 0
+scene.textures.139857990544904Color_Transp.mapping.uvscale = 20 -20
+scene.textures.139857990544904Color_Transp.mapping.uvdelta = 0 1
+##
 scene.textures.139857990544904Color.type = "dots"
 scene.textures.139857990544904Color.inside = "0.7 0.7 0.7"
 scene.textures.139857990544904Color.outside = "0 0 0.7"
 scene.textures.139857990544904Color.mapping.type = "uvmapping2d"
 scene.textures.139857990544904Color.mapping.uvindex = 0
 scene.textures.139857990544904Color.mapping.rotation = 0
-scene.textures.139857990544904Color.mapping.uvscale = 30 -30
+scene.textures.139857990544904Color.mapping.uvscale = 20 -20
 scene.textures.139857990544904Color.mapping.uvdelta = 0 1
+##
 scene.materials.__CLAY__.type = "matte"
 scene.materials.__CLAY__.kd = "0.5 0.5 0.5"
 scene.materials.__CLAY__.transparency.shadow = 0 0 0
@@ -55,6 +72,7 @@ scene.materials.__CLAY__.visibility.indirect.specular.enable = 1
 scene.materials.__CLAY__.shadowcatcher.enable = 0
 scene.materials.__CLAY__.shadowcatcher.onlyinfinitelights = 0
 scene.materials.__CLAY__.photongi.enable = 1
+##
 scene.materials.mat_cube1139858847948808.type = "matte"
 scene.materials.mat_cube1139858847948808.kd = "0.7 0.7 0.7"
 scene.materials.mat_cube1139858847948808.transparency.shadow = 0 0 0
@@ -72,8 +90,10 @@ scene.materials.mat_cube1139858847948808.visibility.indirect.specular.enable = 1
 scene.materials.mat_cube1139858847948808.shadowcatcher.enable = 0
 scene.materials.mat_cube1139858847948808.shadowcatcher.onlyinfinitelights = 0
 scene.materials.mat_cube1139858847948808.photongi.enable = 1
+##
 scene.materials.mat_plane139857991252616.type = "matte"
-scene.materials.mat_plane139857991252616.kd = "139857989714440Color"
+#scene.materials.mat_plane139857991252616.kd = "139857989714440Color"
+scene.materials.mat_plane139857991252616.kd = 0.7 0.7 0.7
 scene.materials.mat_plane139857991252616.transparency.shadow = 0 0 0
 scene.materials.mat_plane139857991252616.id = 10034367
 scene.materials.mat_plane139857991252616.emission.gain = 1 1 1
@@ -86,11 +106,13 @@ scene.materials.mat_plane139857991252616.emission.directlightsampling.type = "AU
 scene.materials.mat_plane139857991252616.visibility.indirect.diffuse.enable = 1
 scene.materials.mat_plane139857991252616.visibility.indirect.glossy.enable = 1
 scene.materials.mat_plane139857991252616.visibility.indirect.specular.enable = 1
-scene.materials.mat_plane139857991252616.shadowcatcher.enable = 0
+scene.materials.mat_plane139857991252616.shadowcatcher.enable = 1
 scene.materials.mat_plane139857991252616.shadowcatcher.onlyinfinitelights = 0
 scene.materials.mat_plane139857991252616.photongi.enable = 1
+##
 scene.materials.mat_cube2139857990867336.type = "matte"
 scene.materials.mat_cube2139857990867336.kd = "139857990544904Color"
+scene.materials.mat_cube2139857990867336.transparency = 139857990544904Color_Transp
 scene.materials.mat_cube2139857990867336.transparency.shadow = 0 0 0
 scene.materials.mat_cube2139857990867336.id = 13398304
 scene.materials.mat_cube2139857990867336.emission.gain = 1 1 1
@@ -106,6 +128,7 @@ scene.materials.mat_cube2139857990867336.visibility.indirect.specular.enable = 1
 scene.materials.mat_cube2139857990867336.shadowcatcher.enable = 0
 scene.materials.mat_cube2139857990867336.shadowcatcher.onlyinfinitelights = 0
 scene.materials.mat_cube2139857990867336.photongi.enable = 1
+##
 scene.objects.1398588469529680.material = "mat_cube1139858847948808"
 scene.objects.1398588469529680.ply = "mesh-00000.ply"
 scene.objects.1398588469529680.camerainvisible = 0
